# E-Commerce-Olist-Brazilian-Marketplace-

./: .env  README.md  main.py  pyproject.toml
python/: EDA.md  EDA_Executive Business Overview.ipynb  EDA_Revenue Analysis.ipynb  dataframes.py
sql/bronze/: ddl_bronze.sql
sql/gold/: views_gold.sql
sql/silver/: ddl_silver.sql  transformation_silver.sql
