[project]
name = "data-analayst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "psycopg2>=2.9.12",
    "scipy>=1.18.0",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
]
